fiex the overflow issue

--- a/NEW-SITE/styles/style.scss
+++ b/NEW-SITE/styles/style.scss
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding:0;
     background-color: #252954;
+    overflow-x: hidden;
     
   }
   ::-webkit-scrollbar{
@@ -13,6 +14,7 @@ body {
   }
   html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   *{
     // font-family: 'Ceviche One', cursive !important;
@@ -487,7 +489,7 @@ body {
       // border:1px solid green;
       margin:0;
       display: flex;
-      height:300px;
+      height:200px;
     }
   
     .footer-navigate{
@@ -640,7 +642,7 @@ body {
       justify-content: center;
       align-items: center;
       width:100%;
-      gap:2rem;
+      // gap:2rem;
     }
   }
   @media screen and (max-width: 825px){
@@ -1519,21 +1521,22 @@ overflow: hidden;
 }
 .stop-scrolling {
 	height: 100%;
-	overflow: hidden;
+	overflow-y: hidden;
 }
 .footer-navigate{
-  border:3px solid yellow;
+  // border:3px solid yellow;
   height:50vh;
   justify-content: space-around;
   padding:10vh 0;
 }
 .nav{
-  border:4px solid red;
+  // border:4px solid red;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap:10%;
+  margin: 30px;
   width:27%;
 }
 
